--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url="https://share.streamlit.io/svellaichamy3/detector-detective/main/dd_final.py" />
+    <meta http-equiv="refresh" content="0; url='https://share.streamlit.io/svellaichamy3/detector-detective/main/dd_final.py'" />
   </head>
   <body>
   </body>
